[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=src/starrocks_br --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/starrocks_br"]

[tool.coverage.report]
omit = ["*/__init__.py"]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
